[package]
name = "minigrep_luke_yang"
version = "0.1.2"
license = "MIT"
description = "minimized grep in The Rust Programming Language created by Luke Yang"
repository = "https://github.com/berryscone/minigrep_luke_yang"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html